// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        4
      </span>
       
      expenses
       totaling 
      <span>
        $500.00
      </span>
      .
    </h3>
    <div
      className="page-header__action"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add Expense
      </[object Object]>
    </div>
  </div>
</div>
`;

exports[`should render Expenses Summary correctly with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $100.00
      </span>
      .
    </h3>
    <div
      className="page-header__action"
    >
      <[object Object]
        className="button"
        to="/create"
      >
        Add Expense
      </[object Object]>
    </div>
  </div>
</div>
`;
